--- a/readme.text
+++ b/readme.text
@@ -4,3 +4,7 @@
     npm install express --save
 
   <---------------------------------------------->
+  
+  ดาวน์โหลด และทำการติดตั้ง โดย npm -i 
+  รัน server โดยพิมพ์ว่า nodemon server.js
+  <---------------------------------------------->
